frontend/test/should_fail/method_model_inh_ovrrd_failep.gm
edge class E
{
	procedure bar(var x:int, var y:int) : (int, int)
	{
		return(42, 42);
	}	
	
	procedure baz()
	{
		return;
	}
}

edge class EE extends E
{
	procedure bar(var x:int) : (int, int)
	{
		return(42, 42);
	}	

	procedure baz() : (int)
	{
		return(42);
	}
}
